<resources>
    <string name="app_name">Workyfie</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="start_session">neue Session starten</string>
    <string name="session">Session</string>
    <string name="stop_session">momentane Session beenden</string>
    <string name="current_status">Status</string>
    <string name="connect_sensor">Verbinde Sensor</string>
    <string name="start_record">Starte Aufzeichnung</string>
    <string name="stop_record">Stoppe Aufzeichnung</string>
    <string name="errSensorConntect">Fehler beim Verbinden mit dem Sensor</string>
    <string name="current_session_duration">momentane Aufzeichnung</string>
    <string name="time_since_last_break">Zeit seit letzter Pause</string>
    <string name="good">Gut</string>
    <string name="perfect">Perfekt</string>
    <string name="bad">Schlecht</string>
    <string name="continue_session">fortsetzen</string>
    <string name="connection">Sensor Verbindung</string>
    <string name="position_of_sensor">Sensor Position</string>
    <string name="sensor_akku">Sensor Akku</string>
    <string name="okayish">Ausreichend</string>
    <string name="sensor">Sensoren</string>
    <string name="disconnect_sensor">Trenne Sensor</string>
    <string name="stop_sensor">Stop Record</string>
    <string name="sidebar_history">Historie</string>
    <string name="sidebar_measure">Messen</string>
    <string name="sidebar_sensor">Sensor</string>
    <string name="information">Informationen</string>
    <string name="current_konzentration">Konzentration</string>
    <string name="scan_sensor">Scan Sensor</string>
    <string name="permission_check_dialog_title">Diese App braucht für Nutzung von BLE Location-Access</string>
    <string name="permission_check_dialog_message">Biitte erlauben Sie den Zugriff auf dem Standort für diese App, damit der Scan nach dem Bitalino-Sensor auch funktioniert.</string>
    <string name="available_device">Verfügbare Geräte</string>
    <string name="no_devices">Keine Geräte verfügbar</string>
    <string name="text_no_connect"><![CDATA[<p><b>Es besteht keine Verindung zum Sensor.</b></p> Stelle eine Verbindung zum Sensor her, um eine Session zu starten.]]></string>
    <string name="change_to_sensor">zum Sensor gehen</string>
    <string name="what_is_eeg">Was ist EEG?</string>
    <string name="place_eeg_sensor">EEG Sensor platzieren</string>
    <string name="do_pause">Pausen machen</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, </string>
    <string name="duration">Dauer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="date">Datum:</string>
</resources>
