<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <RelativeLayout
        android:id="@+id/status_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true">

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textConnected"
            android:layout_below="@+id/imageConnectStatus"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"/>

        <ImageView
            app:srcCompat="@mipmap/connected_chains"
            android:id="@+id/imageConnectStatus"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_height="128dp"
            android:layout_width="128dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/information_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/status_container"
        android:background="@drawable/rectangle"
        android:elevation="4dp"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:stretchColumns="1,1"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_bottom">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/session_table_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/current_status" />

                <TextView
                    android:id="@+id/sensor_status"
                    style="@style/session_table_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="[TO FILL]" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    style="@style/session_table_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/connection" />

                <TextView
                    android:id="@+id/connection_status"
                    style="@style/session_table_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@string/good"
                    android:textColor="@color/green" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/session_table_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/position_of_sensor" />

                <TextView
                    android:id="@+id/sensor_position"
                    style="@style/session_table_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@string/good"
                    android:textColor="@color/green" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/session_table_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/sensor_akku" />

                <TextView
                    android:id="@+id/status"
                    style="@style/session_table_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@string/okayish"
                    android:textColor="@color/warning" />
            </TableRow>

        </TableLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/information_table"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/scan_sensor"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/scan_sensor"/>

        <Button
            android:id="@+id/disconnect_sensor"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/disconnect_sensor" />

        <ProgressBar
            android:id="@+id/loader_sensor"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/device_list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/button_container"
        android:background="@drawable/rectangle"
        android:elevation="4dp"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/textView5"
            style="@style/session_table_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_device"
            android:background="@drawable/border_bottom"/>

        <TextView
            android:text="@string/no_devices"
            style="@style/session_table_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/empty_device_list" />

        <ListView
            android:id="@+id/device_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"/>

    </RelativeLayout>

</RelativeLayout>